src/main/kubestandalone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
  labels:
    app: dod-race-app
    app.kubernetes.io/component: dod-race-app
    app.kubernetes.io/instance: dod-race-app
    app.kubernetes.io/name: dod-race-app
    app.kubernetes.io/part-of: dod-race-app
    app.openshift.io/runtime: quarkus
  name: dod-race-app
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dod-race-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dod-race-app
        deployment: dod-race-app
    spec:
      containers:
      - env:
        - name: QUARKUS_PROFILE
          value: openshift-cluster
        - name: INFINISPAN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: infinispan-generated-secret
        image: quay.io/rhdevelopers/dod-race-app:click
        imagePullPolicy: IfNotPresent
        name: dod-race-app
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
