src/main/kubestandalone/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2022-09-07T10:55:39Z"
  labels:
    app: dod-race-app
    app.kubernetes.io/component: dod-race-app
    app.kubernetes.io/instance: dod-race-app
    app.kubernetes.io/name: dod-race-app
    app.kubernetes.io/part-of: dod-race-app
    app.openshift.io/runtime-version: 1.0.0
  name: dod-race-app
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: dod-race-app
    deployment: dod-race-app
  sessionAffinity: None
  type: ClusterIP
